skins/larry/mail.css
/* ... */
#messagecontframe {
	border: 0;
	border-radius: 4px;
}

#messagecontent {
	position: absolute;
	top: 110px;
	left: 0;
	width: 100%;
	bottom: 1px;
	overflow: auto;
	-webkit-overflow-scrolling: touch;
}

#messageheader,
#composeheaders {
	position: relative;
	padding: 3px 0;
	background: #f9f9f9;
	background: -moz-linear-gradient(top, #fff 0%, #f0f0f0 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#f0f0f0));
	background: -o-linear-gradient(top, #fff 0%, #f0f0f0 100%);
	background: -ms-linear-gradient(top, #fff 0%, #f0f0f0 100%);
	background: linear-gradient(to bottom, #fff 0%, #f0f0f0 100%);
	border-bottom: 1px solid #dfdfdf;
}

#mailview-right #messageheader {
	border-radius: 4px 4px 0 0;
	padding-left: 78px;
	/* avoid headers eating up all the vertical space */
	max-height: 50%;
	overflow: auto;
}

h2.subject {
	font-size: 15px;
	margin: 0 15em 0 0;
	padding: 4px 8px 2px 8px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

#mailview-right #messageheader h2.subject {
	margin-left: -56px;
}

h3.subject {
	font-size: 14px;
	margin: 0 15em 0 0;
	padding: 8px 8px 4px 8px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.headers-table td {
	color: #666;
	padding: 2px 8px;
}

.headers-table td.header,
.ui-dialog-content.popup span.adr {
	font-weight: bold;
}

.headers-table td.header-title {
	white-space: nowrap;
}

.headers-table td.header a,
.ui-dialog-content.popup span.adr a {
	color: #666;
	text-decoration: none;
}

.headers-table td.header a:hover,
.ui-dialog-content.popup span.adr a:hover {
	text-decoration: underline;
}

.headers-table td.subject {
	color: #333;
	font-size: 110%;
	font-weight: bold;
}

.headers-table td.header span,
.ui-dialog-content.popup span.adr {
	white-space: nowrap;
}

.headers-table td.header a.morelink {
	color: #0069a6;
	white-space: nowrap;
	font-weight: normal;
}

.rcmaddcontact {
	position: relative;
	top: 1px;
	margin-left: 0.5em;
}

.rcmaddcontact imp {
	width: 20px;
	height: 13px;
}

#preview-allheaders {
	display: none;
}

#preview-allheaders td.header-title,
#preview-shortheaders td.header-title {
	padding-left: 0;
}

#preview-shortheaders td.header {
	padding-right: 18px;
}

.moreheaderstoggle {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 18px;
	padding: 0;
	outline: none;
	background: #f2f2f2;
	background: -moz-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: -webkit-gradient(linear, left top, right top, color-stop(0,#fbfbfb), color-stop(100%,#e9e9e9));
	background: -o-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: -ms-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	border-right: 1px solid #dfdfdf;
	border-radius: 3px 0 0 0; /* for Opera */
}

.moreheaderstoggle:focus {
	background: #f2f2f2;
	background: -moz-linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	background: -webkit-gradient(linear, left top, right top, color-stop(0,#66bcd9), color-stop(100%,#49b3d2));
	background: -o-linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	background: -ms-linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	background: linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	border-right-color: #149cc5;
}

.moreheaderstoggle .iconlink {
	display: inline-block;
	position: absolute;
	top: 8px;
	left: 0;
	width: 18px;
	height: 16px;
	background: url(images/buttons.png) -27px -242px no-repeat;
}

.moreheaderstoggle.remove .iconlink {
	top: auto;
	bottom: 5px;
	background-position: -5px -242px;
}

#full-headers {
	position: relative;
}

div.more-headers {
	position: absolute;
	top: -12px;
	right: 10px;
	width: 12px;
	height: 10px;
	cursor: pointer;
	background: url(images/buttons.png) center -1579px no-repeat;
}

div.hide-headers {
	background-position: center -1590px;
}

#all-headers {
	position: relative;
	margin: 4px 10px;
	padding: 0;
	height: 180px;
	border: 1px solid #ccc;
	border-radius: 4px;
	background: #fdfdfd;
	box-shadow: inset 0 0 1px 1px rgba(0,0,0, 0.1);
	-webkit-box-shadow: inset 0 0 1px 1px rgba(0,0,0, 0.1);
}

#headers-source {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	padding: 3px 6px;
	overflow: auto;
	text-align: left;
	color: #333;
}

#messageheader.previewheader #all-headers {
	margin-left: 0;
}

#messageheader.previewheader {
	position: relative;
	height: auto;
	min-height: 52px;
	padding: 0 0 3px 72px;
}

#messageheader.previewheader h3.subject {
	padding: 8px 8px 2px 0;
}

#messageheader.previewheader #contactphoto {
	display: block;
	position: absolute;
	top: 11px;
	left: 30px;
	width: 32px;
	height: 32px;
	overflow: hidden;
	background: url(images/contactpic_32px.png) center center no-repeat #fff;
	border-radius: 3px;
}

#messageheader.previewheader #contactphoto img {
	width: 32px;
	height: auto;
	border-radius: 3px;
}

#messageheader .message-headers {
	min-height: 60px;
}

#messageheader #contactphoto {
	display: block;
	position: absolute;
	top: 34px;
	left: 30px;
	width: 48px;
	height: 48px;
	overflow: hidden;
	border-radius: 4px;
	border: 1px solid #e6e6e6;
	background: url(images/contactpic_48px.png) center center no-repeat #fff;
}

#messageheader #contactphoto img {
	width: 48px;
	height: auto;
	border-radius: 4px;
}

#messageheader #countcontrols,
#messageheader #formatcontrols {
	position: absolute;
	top: 8px;
	right: 8px;
	text-align: right;
	white-space: nowrap;
}

#messageheader #formatcontrols {
	top: 38px;
	right: 8px;
}

#messageheader .pagenav .countdisplay {
	padding-right: 0.5em;
	white-space: nowrap;
}

#messagecontent .leftcol,
#messagepreview .leftcol {
	margin-right: 252px;
}

#messagecontent .rightcol,
#messagepreview .rightcol {
	float: right;
/*
	position: absolute;
	top: 10px;
	right: 10px;
	height: 90%;
*/
	width: 230px;
	margin: 8px;
	min-height: 200px;
	background: #f0f0f0;
	padding: 8px;
	border-radius: 4px;
}

#messagebody {
	position: relative;
	margin: 8px;
}
/* ... */

